[package]
name = "rust-print-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
printers = "2.2.0"
anyhow = "1.0" 
lopdf = "0.38.0" 
utoipa = { version = "4.2.0", features = ["actix_extras"] } 
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }